# damas

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  TODO.md  codecov.yaml  config.sample.kdl  justfile  rust-toolchain.toml  tarpaulin.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/agents/: test-agent.md
.github/workflows/: ci.yaml
src/: config.rs  default_error.html  error.rs  http.rs  index.rs  lib.rs  main.rs  response.rs  router.rs  server.rs  util.rs
src/error/: damas_error.rs  error_registry.rs  mod.rs
template/: error.html  error.jinja  index.html  index.jinja
test/: main_test.rs
