[package]
name = "damas"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
compio = { version = "0.17.0" , features = ["macros", "runtime"]}
httparse = "1.10.1"
knus = "3.3.1"
miette = { version = "7.6.0", features = ["fancy"] }
mime_guess = "2.0.5"
urlencoding = "2.1.3"

[[test]]
name = "main_test"
path = "test/main_test.rs"
harness = true
